test_src/compiler_errors/types/binary/LeftShiftBoolError1.b
class LeftShiftBoolError1 {
    void test() {
        println(true << 1);
    }
}
